--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <p id="demo2"></p>
 <p id="demo3"></p>
 <br><br>
-<button onclick="location.reload()" class="button button1" title="click to reset and add new tasks">Have You finished all the tasks?</button>
+<button onclick="location.reload()" class="button button1" title="click to reset and add new tasks"><i>Have You finished all the tasks?</i></button>
 
 <script>
 // Write Javascript code!
