--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html> 
 <body>
 <style></style>
-<h2> JS To-Do List </h2>
+<h2> JS To-Do List </h2><br><br><br><br>
 
 <button onclick="myFunction()" title="Click On Me to Add A Task">Task 1</button><br>
 <button onclick="myFunction1()" title="Click On Me to Add A Task">Task 2</button><br>
@@ -12,7 +12,7 @@
 <p id="demo"></p>
 <p id="demo2"></p>
 <p id="demo3"></p>
-<br><br>
+<br><br><br><br><br><br><br><br>
 <button onclick="location.reload()" class="button button1" title="click to reset and add new tasks"><i>Have You finished all the tasks?</i></button>
 
 <script>
